# starfield-sdn-plugin

./: README.md  plugin-manifest.json
src/cpp/: CMakeLists.txt  wasm_api.cpp
src/cpp/include/starfield/: catalog.h  constants.h  sixdof_core.h  star_tracker.h  types.h
src/cpp/src/: catalog.cpp  star_tracker.cpp
src/cpp/tests/: test_catalog.cpp  test_rendering.cpp  test_sixdof.cpp  test_star_tracker.cpp
src/shaders/: constellation_lines.frag  constellation_lines.vert  star_field.frag  star_field.vert
